<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_colores"
    tools:context=".LoginVeterinario">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        android:orientation="horizontal"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/ll_tituloLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toBottomOf="@id/h05"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <TextView
            android:id="@+id/tv_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_login"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_emailUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/ll_tituloLogin"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_emailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/tv_emailUsuario"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_emailVeterinario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/hint_emailUsuario"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_passwordUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/ll_emailUsuario"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_passwordUsuario"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/tv_passwordUsuario"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_passwordVeterinario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/hint_passwordUsuario"
            android:inputType="textPassword"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/ll_passwordUsuario"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/btn_login"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="582dp"
            app:cornerRadius="15dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registro"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/btn_registrar"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="582dp"
            app:cornerRadius="15dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>