<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_colores"
    tools:context=".RegistroDatosVeterinario">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        android:orientation="horizontal"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/ll_registro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/h05"
        app:layout_constraintBottom_toTopOf="@id/ll_nombreUsuario"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <TextView
            android:id="@+id/tv_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_registro"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_registro"
        app:layout_constraintBottom_toTopOf="@id/ll_apellidoUsuario"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_nombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/tv_nombre"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_nombreVeterinario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/et_usuario"
            android:inputType="textPersonName"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_apellidoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_nombreUsuario"
        app:layout_constraintBottom_toTopOf="@id/ll_emailUsuario"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_apellidoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/tv_apellidoUsuario"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_apellidoVeterinario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/hint_apellidoUsuario"
            android:inputType="textPersonName"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_emailUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_apellidoUsuario"
        app:layout_constraintBottom_toTopOf="@id/ll_passwordUsuario"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_emailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/tv_emailUsuario"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_emailVeterinario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/hint_emailUsuario"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_passwordUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_emailUsuario"
        app:layout_constraintBottom_toTopOf="@id/ll_identificacionUsuario"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_passwordUsuario"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/tv_passwordUsuario"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_passwordVeterinario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/hint_passwordUsuario"
            android:inputType="textPassword"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_identificacionUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_passwordUsuario"
        app:layout_constraintBottom_toTopOf="@id/ll_latitud"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_marcaCarro"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="Marca Vehículo:"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_marcaVehiculo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="Escriba la marca"
            android:inputType="text"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_latitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_identificacionUsuario"
        app:layout_constraintBottom_toTopOf="@id/ll_longitud"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_latitud"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="Latitud:"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_latitud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="Escriba su latitud"
            android:inputType="text"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_longitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/ll_continuar"
        app:layout_constraintTop_toBottomOf="@id/ll_latitud"
        app:layout_constraintEnd_toEndOf="@id/v95"
        app:layout_constraintStart_toStartOf="@id/v05">

        <TextView
            android:id="@+id/tv_longitud"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="Longtud:"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="115dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_longitud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="Escriba su longitud"
            android:inputType="text"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="456dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_continuar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/ll_longitud"
        app:layout_constraintBottom_toTopOf="@id/h95"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/btn_continuar"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="582dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

