<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_colores"
    tools:context=".RegistroFotoUsuario">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/ll_tituloFotoPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="@id/h05"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <TextView
            android:id="@+id/tv_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_fotoPerfil"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_fotos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_mostrarFoto"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_foto"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/btn_tomarFoto"
            app:cornerRadius="15dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_galeria"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/btn_cargarFoto"
            app:cornerRadius="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_registro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/h95"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continuar"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/btn_registrar"/>

    </LinearLayout>


    <LinearLayout
        android:id= "@+id/ll_mostrarFoto"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/ll_tituloFotoPerfil"
        app:layout_constraintBottom_toTopOf="@id/ll_btn_fotos"
        app:layout_constraintStart_toStartOf="@id/v05"
        app:layout_constraintEnd_toEndOf="@id/v95">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>